feat: 打安装包